<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ed.w1d2helloworld.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/colorBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myName"/>

    <TextView
        android:textColor="@color/colorBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myHobbies"/>

    <TextView
        android:textColor="@color/colorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myText2"/>

    <TextView
        android:textColor="@color/colorPurple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myApp"/>
</LinearLayout>
